# ytalloc

./: .clang-format  CMakeLists.txt
include/ytalloc/: ytalloc.h
src/: alloc_buddy.c  alloc_list.c  alloc_macros.h  alloc_osintf.c  alloc_osintf.h  alloc_slab.c  alloc_static.c  config.h.in
src/aux/: auxmath.c  auxmath.h  list.c  list.h
tests/: CMakeLists.txt  buddy_test.cc  list_test.cc  slab_test.cc  static_test.cc
tests/tests_common/: DuplicatedWrite.cc  DuplicatedWrite.h
